--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ langchain-text-splitters==0.2.2
 langchain-groq==0.1.6
 transformers==4.43.2
 sentence-transformers==3.0.1
-unstructured==0.15.0
+unstructured
 unstructured[pdf]==0.15.0
 python-dotenv==1.0.1
